RIB-157: minor overflow fix on place page

--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -187,6 +187,7 @@ h3 {
     display: flex;
     align-items: baseline;
     gap: 0.5rem;
+    overflow-wrap: normal;
 }
 
 .place-header > .rating > i, .place-rating-average > i {
@@ -241,6 +242,7 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    overflow-wrap: normal;
 }
 
 .place-rating-average > i {
